# claude-project-planner

./: .env.example  .gitignore  ARCHITECTURE_AUDIT_RECOMMENDATIONS.md  CHANGELOG.md  CLAUDE.md  CONTEXT_claude-project-planner.md  DEEP_RESEARCH_BUDGET_SYSTEM.md  GEMINI_DEEP_RESEARCH_INTEGRATION.md  LICENSE  PROJECT_PLANNER_MIGRATION_PLAN.md  PROJECT_STATUS.md  README.md  REFACTORING_PLAN.md  REFACTOR_SUMMARY.md  RESEARCH_OPENROUTER_WEB_SEARCH.md  RESEARCH_PRICING_ANALYSIS.md  RESEARCH_PROMPT_CACHING.md  SETUP_GUIDE.md  TRANSFORMATION_PLAN.md  WORKFLOW_FIX_SUMMARY.md  pyproject.toml  requirements-full-plan.txt  requirements.txt
.claude/: PLANNER.md
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.claude-plugin/hooks/: SessionStart.sh
agents/: architecture-validator.md
commands/: full-plan.md  generate-report.md  refine-plan.md  resume-plan.md  setup.md  tech-plan.md
docs/: API.md  DEPENDENCIES.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  ENVIRONMENT_DETECTION.md  FEATURES.md  PARALLELIZATION.md  PARALLELIZATION_GUIDE.md  README.md  RELEASING.md  SKILLS.md  TROUBLESHOOTING.md  USER_FLOW.md  WORKFLOWS.md  _sidebar.md  index.html
docs/deprecated/: DEPENDENCIES-old.md  INTERACTIVE_SETUP-old.md
docs/plans/: 2026-01-15-progress-tracking-error-recovery-design.md
examples/: parallelization-scenarios.md
hooks/: hooks.json
project_planner/: __init__.py  api.py  cli.py  core.py  models.py  utils.py
project_planner/.claude/: PLANNER.md
project_planner/.claude/skills/ai-startup-advisor/: SKILL.md
project_planner/.claude/skills/architecture-research/: SKILL.md
project_planner/.claude/skills/building-blocks/: SKILL.md
project_planner/.claude/skills/competitive-analysis/: SKILL.md
project_planner/.claude/skills/feasibility-analysis/: SKILL.md
project_planner/.claude/skills/generate-image/: SKILL.md
project_planner/.claude/skills/market-research-reports/: SKILL.md
project_planner/.claude/skills/marketing-campaign/: SKILL.md
project_planner/.claude/skills/markitdown/: INSTALLATION_GUIDE.md  OPENROUTER_INTEGRATION.md  QUICK_REFERENCE.md  README.md  SKILL.md  SKILL_SUMMARY.md
project_planner/providers/: __init__.py  base.py  gemini_provider.py  openrouter_provider.py  router.py
scripts/: README.md  analyze-dependencies.py  analyze-parallelization.py  budget-tracker.py  bump_version.py  check-dependencies.py  check-deps.sh  checkpoint-manager.py  checkpoint_manager.py  cleanup_research_files.py  create-plan-input.sh  create-planning-guide.py  enhanced_research_integration.py  generate-phase-summary.py  install-all-dependencies.py  monitor-research-progress.py  multi-model-validator.py  parallel-orchestrator.py  parse-plan-input.py  progress-tracker.py  publish.py  research_checkpoint_manager.py  research_config.py  research_error_handling.py  research_errors.py  research_progress_tracker.py  research_state_machine.py  resumable_research.py  resume-research.py  run-in-env.sh  setup-planning-config.py  streaming_research_wrapper.py  test-providers.py  validate-output.sh  verify_package.py
scripts/deprecated/: README.md  ensure-dependencies.sh  wait-for-dependencies.py
templates/: plan-input-template.md
tests/: test_checkpoint_system.py  test_deep_research_checkpoints.py  test_progress_tracking.py  test_providers.py  test_refactoring_verification.py  test_research_integration.py  test_research_lookup.py  test_setup_config.py  test_user_facing_features.py
(+44 files in other folders)
