[project]
name = "project-planner"
version = "1.4.3"
description = "AI-powered project planning tool - generates comprehensive software architecture documents, sprint plans, building blocks, service cost analysis, and implementation roadmaps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "openai>=1.0.0",           # OpenRouter API client for research
    "markitdown>=0.1.0",       # Document conversion
]

# System Dependencies (must be installed separately):
#
# Optional for diagram generation:
#   - Mermaid CLI for rendering Mermaid diagrams
#     Install: npm install -g @mermaid-js/mermaid-cli
#
# Optional for LaTeX document generation:
#   - macOS: MacTeX (https://www.tug.org/mactex/) or BasicTeX
#     Install: brew install --cask mactex-no-gui
#   - Linux: TeX Live
#     Install: sudo apt-get install texlive-full (Ubuntu/Debian)
#   - Windows: MiKTeX (https://miktex.org/) or TeX Live

[project.optional-dependencies]
# Document processing (PDF, DOCX, PPTX, XLSX)
documents = [
    "pillow>=10.0.0",
    "python-pptx>=0.6.21",
]

# Google Gemini integration (requires Google AI Pro subscription)
gemini = [
    "google-genai>=0.1.0",
]

# Performance enhancements
performance = [
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
]

# All optional dependencies
all = [
    "pillow>=10.0.0",
    "python-pptx>=0.6.21",
    "google-genai>=0.1.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
]

# Legacy alias for backward compatibility
pptx = [
    "pillow>=10.0.0",
    "python-pptx>=0.6.21",
]

[project.scripts]
project-planner = "project_planner.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project_planner"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
